$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-08-26 [A] Added back in "move to top/bottom" to album & picture managers {Paver}
2009-08-26 [C] Cleaned up picture manager display including toggle buttons to show/hide thumbnails {Paver}
2009-08-26 [B] Fixed the issue of proper handling of php's native error during upload process (flash) {Abbas}
2009-08-25 [B] Fixed sorting bugs in album and picture managers (thread ID 61352) {Paver}
2009-08-25 [B] Fixed caching issues with xp publisher {Nibbler}
2009-08-25 [B] Fixed issue with creating albums in xp publisher with MySQL's strict mode enabled {Nibbler}
2009-08-25 [B] Fixed bridge issue when creating albums in xp publisher {Nibbler}
2009-08-23 [A] Displaying thumbnail on picture manager (thread ID 61340) {GauGau}
2009-08-21 [B] Fixed issue when viewing pictures of meta albums (thread ID 61265) {eenemeenemuu}
2009-08-20 [B] Added function to bring jquery library to top of JavaScript includes list {GauGau}
2009-08-14 [S] Added form token to plug-in manager {eenemeenemuu}
2009-08-12 [O] Disallowed zero as possible value for number of login attempts option {GauGau}
2009-08-06 [A] Added plugin hooks 'smilies_display' & 'smilies_process' {eenemeenemuu}
2009-08-04 [B] Fixed sloppy coding in album manager {GauGau}
2009-08-03 [B] Fixed user manager pagination (thread ID 60871) {Nibbler}
2009-07-29 [B] Removed unneeded <head>-section that caused 404 error for inline-help (thread ID 60847) {GauGau}
2009-07-25 [D] Fixed reference to plugins folder (thread ID 60772) {GauGau}
2009-07-24 [M] Updated version count from cpg1.5.1 to cpg1.5.2 to prepare the next release {GauGau}